# camera-image-dir

./: .gitignore  Makefile  README.md  build.sh  meta.json  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: publish.yaml  test.yaml
src/: __init__.py  __main__.py  imageDir.py  main.py
src/models/: image_dir.py
tests/: test_config.py  test_index_logic.py
